--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Captain America - Brave new world</title>
+    <title>Minions - Meu malvado favorito</title>
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
